--- a/app/globals.css
+++ b/app/globals.css
@@ -117,6 +117,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-slate-200 text-foreground;
+    @apply bg-slate-200 font-sans text-foreground;
   }
 }
